时间点赞分享

--- a/components/classic/common.wxss
+++ b/components/classic/common.wxss
@@ -8,3 +8,16 @@
   width: 750rpx;
   height: 500rpx;
 }
+
+.tag{
+  width: 46rpx;
+  height: 142rpx;
+  position: relative;
+  right: 310rpx;
+  bottom:58rpx;
+}
+
+.content{
+  font-size: 36rpx;
+  max-width: 550rpx;
+}
