--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,2 +1,17 @@
-<!--pages/classic/classic.wxml-->
-<view>1</view>
+<!-- pages/classic/classic.wxml -->
+<view class="container">
+	<view class="header">
+		<!-- 日期 -->
+		<v-essay class="episode" index="{{classic.index}}"></v-essay>
+		<view class="like-container">
+			<!-- 点赞 -->
+			<v-like class="like" bind:like="onLike" like="{{likeStatus}}" count="{{likeCount}}"></v-like>
+			<!-- 分享 -->
+			<v-button class="share-btn" open-type="share">
+				<image class="share" slot="img" src="/images/icon/share.png"></image>
+			</v-button>
+		</view>
+	</view>
+	<!-- 首页电影封面 -->
+  <v-movie hideen="{{classic.type != 100}}" img="{{classic.image}}" content="{{classic.content}}" />
+</view>
