--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,1 +1,36 @@
 /* pages/classic/classic.wxss */
+.container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 50px;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.like-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.episode{
+  margin-left: 10px;
+  margin-top: 7px;
+}
+
+.share{
+  width: 40rpx;
+  height: 40rpx;
+}
