--- a/components/classic/movie/index.wxml
+++ b/components/classic/movie/index.wxml
@@ -1,6 +1,6 @@
 <!--首页电影-->
 <view hidden="{{hidden}}" class="classic-container">
-	<image class="class-img" src="{{img}}" />
+	<image class="classic-img" src="{{img}}" />
 	<image class="tag" src="images/movie@tag.png" />
-	<image class="content">{{content}}</image>
+	<text class="content">{{content}}</text> 
 </view>
