--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,12 +1,12 @@
 /* pages/classic/classic.wxss */
-.container{
+.container {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.header{
+.header {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -17,7 +17,7 @@
   border-bottom: 1px solid #f5f5f5;
 }
 
-.like-container{
+.like-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -25,12 +25,17 @@
   margin-right: 30px;
 }
 
-.episode{
+.episode {
   margin-left: 10px;
   margin-top: 7px;
 }
 
-.share{
+.share {
   width: 40rpx;
   height: 40rpx;
+}
+
+.navi {
+  position: absolute;
+  bottom: 80rpx;
 }
