--- a/components/navi/index.wxml
+++ b/components/navi/index.wxml
@@ -1,6 +1,6 @@
 <!--components/navi/index.wxml-->
 <view class="container">
-	<image bindtap="onLeft" class="icon" src="{{latest ? disLeftSrc :leftSrc}}"></image>
-  <text class="title">{{title}}</text>
-	<image bindtap="onRight" class="icon" src="{{first ? disRightSrc :rightSrc}}"></image>
+	<image bind:tap="onLeft" class="icon" src="{{latest ? disLeftSrc : leftSrc}}" />
+	<text class="title">{{title}}</text>
+	<image bind:tap="onRight" class="icon" src="{{first ? disRightSrc : rightSrc}}" />
 </view>
