--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -11,8 +11,8 @@
 		<text class="headerline">短评</text>
 		<text class="shadow" wx:if="{{comments == false}}">还没短评</text>
 		<view class="comments-container">
-			<block wx:for="{{util.limit(comments,10)}}" wx:key="content">
-				<v-tag tag-class="{{tool.highlight(index)}}" text="{{item.content}}">
+			<block wx:for="{{util.limit(comments,10)}}" wx:key="id">
+				<v-tag tag-class="{{tool.highlight(index)}}" text="{{item.content}}" class="tag">
 					<text class="num" slot="after">{{'+' + item.nums}}</text>
 				</v-tag>
 			</block>
