--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,2 +1,29 @@
-<!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<view class="container">
+	<image src="./images/my@bg.png" class="bg"></image>
+	<v-button wx:if="{{!hasUserInfo}}" open-type="getUserInfo" class="avatar-position" bind:getuserInfo="">
+		<image slot="img" class="avatar" src="/images/my/my.png"></image>
+	</v-button>
+	<view class="avatar-container avatar-position">
+		<image src="{{userInfo.avatarUrl}}" wx:if="{{hasUserInfo}}" class="avatar"></image>
+		<open-data wx:if="{{hasUserInfo}}" type="userNickName"></open-data>
+	</view>
+	<view class="about-container">
+		<view bind:tap="onJumpToAbout" class="about-us">
+			<image src="/images/my/about.png" />
+			<text class="description">关于我们</text>
+		</view>
+		<view class="about-us">
+			<text class="book-num">{{myBooksCount}}</text>
+			<text class="description">喜欢的书</text>
+		</view>
+	</view>
+	<view class="like-container">
+		<image class=".headline" src="/images/my/like.png" />
+		<view class="preview-container">
+			<block wx:for="{{classics}}">
+				<v-preview bind:tap="onPreviewTap" class="preview" classic="{{item}}" />
+			</block>
+		</view>
+	</view>
+
+</view>
